exports[`@handl/client > request > no match > correct response data #0`] =
{
  "_cacheMetadata": {
    "query": {
      "cacheControl": {
        "maxAge": 1,
        "public": true
      },
      "ttl": 297471601000
    },
    "query.organization": {
      "cacheControl": {
        "maxAge": 1,
        "public": true
      },
      "ttl": 297471601000
    }
  },
  "data": {
    "organization": {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook"
    }
  }
};

exports[`@handl/client > request > no match > correct cache data #0`] =
{
  "entries": [
    [
      "dataEntities::Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook"
      }
    ],
    [
      "queryResponses::ea1cbc58eca798225b53f59d95ffb23a",
      {
        "cacheMetadata": {
          "query": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          },
          "query.organization": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          }
        },
        "data": {
          "organization": {
            "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
            "email": "",
            "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
            "login": "facebook",
            "name": "Facebook",
            "url": "https://github.com/facebook"
          }
        }
      }
    ],
    [
      "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook"
      }
    ]
  ],
  "metadata": [
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 410,
      "tags": [],
      "updatedCount": 0
    },
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "dataEntities::Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 410,
      "tags": [],
      "updatedCount": 0
    },
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "queryResponses::ea1cbc58eca798225b53f59d95ffb23a",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 678,
      "tags": [],
      "updatedCount": 0
    }
  ]
};

exports[`@handl/client > request > query response match > correct response data #0`] =
{
  "_cacheMetadata": {
    "query": {
      "cacheControl": {
        "maxAge": 1,
        "public": true
      },
      "ttl": 297471601000
    },
    "query.organization": {
      "cacheControl": {
        "maxAge": 1,
        "public": true
      },
      "ttl": 297471601000
    }
  },
  "data": {
    "organization": {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "email": "",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook",
      "name": "Facebook",
      "url": "https://github.com/facebook"
    }
  }
};

exports[`@handl/client > request > query response match > correct cache data #0`] =
{
  "entries": [
    [
      "dataEntities::Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook"
      }
    ],
    [
      "queryResponses::ea1cbc58eca798225b53f59d95ffb23a",
      {
        "cacheMetadata": {
          "query": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          },
          "query.organization": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          }
        },
        "data": {
          "organization": {
            "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
            "email": "",
            "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
            "login": "facebook",
            "name": "Facebook",
            "url": "https://github.com/facebook"
          }
        }
      }
    ],
    [
      "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook"
      }
    ]
  ],
  "metadata": [
    {
      "accessedCount": 1,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "queryResponses::ea1cbc58eca798225b53f59d95ffb23a",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 678,
      "tags": [],
      "updatedCount": 0
    },
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 410,
      "tags": [],
      "updatedCount": 0
    },
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "dataEntities::Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 410,
      "tags": [],
      "updatedCount": 0
    }
  ]
};

exports[`@handl/client > request > request field path / data entity match > correct response data #0`] =
{
  "_cacheMetadata": {
    "query": {
      "cacheControl": {
        "maxAge": 1,
        "public": true
      },
      "ttl": 297471601000
    },
    "query.organization": {
      "cacheControl": {
        "maxAge": 1,
        "public": true
      },
      "ttl": 297471601000
    }
  },
  "data": {
    "organization": {
      "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
      "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "login": "facebook"
    }
  }
};

exports[`@handl/client > request > request field path / data entity match > correct cache data #0`] =
{
  "entries": [
    [
      "dataEntities::Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook"
      }
    ],
    [
      "queryResponses::ea1cbc58eca798225b53f59d95ffb23a",
      {
        "cacheMetadata": {
          "query": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          },
          "query.organization": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          }
        },
        "data": {
          "organization": {
            "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
            "email": "",
            "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
            "login": "facebook",
            "name": "Facebook",
            "url": "https://github.com/facebook"
          }
        }
      }
    ],
    [
      "queryResponses::f666cc27cdcfcecacb340b64fcf27506",
      {
        "cacheMetadata": {
          "query": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          },
          "query.organization": {
            "cacheControl": {
              "maxAge": 1,
              "public": true
            },
            "ttl": 297471601000
          }
        },
        "data": {
          "organization": {
            "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
            "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
            "login": "facebook"
          }
        }
      }
    ],
    [
      "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      {
        "description": "We are working to build community through open source technology. NB: members must have two-factor auth.",
        "email": "",
        "id": "MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
        "login": "facebook",
        "name": "Facebook",
        "url": "https://github.com/facebook"
      }
    ]
  ],
  "metadata": [
    {
      "accessedCount": 1,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "requestFieldPaths::5256db516a2438a7e5488a00413f4809",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 410,
      "tags": [],
      "updatedCount": 0
    },
    {
      "accessedCount": 1,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "dataEntities::Organization::MDEyOk9yZ2FuaXphdGlvbjY5NjMx",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 410,
      "tags": [],
      "updatedCount": 0
    },
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "queryResponses::f666cc27cdcfcecacb340b64fcf27506",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 584,
      "tags": [],
      "updatedCount": 0
    },
    {
      "accessedCount": 0,
      "added": 297471600000,
      "cacheability": {
        "metadata": {
          "cacheControl": {
            "maxAge": 1,
            "public": true
          },
          "ttl": 297471601000
        }
      },
      "key": "queryResponses::ea1cbc58eca798225b53f59d95ffb23a",
      "lastAccessed": 297471600000,
      "lastUpdated": 297471600000,
      "size": 678,
      "tags": [],
      "updatedCount": 0
    }
  ]
};
